--- a/register.html
+++ b/register.html
@@ -18,7 +18,7 @@
   --shadow:rgba(0,0,0,0.08);
 }
 *{box-sizing:border-box;margin:0;padding:0;font-family:Inter,sans-serif;}
-body{height:100vh;background:var(--bg);display:flex;align-items:center;justify-content:center;flex-direction:column;}
+body{height:100vh;background:var(--bg);display:flex;align-items:center;justify-content:center;position:relative;}
 .reg-card{
   background:var(--card);
   padding:32px 28px;
@@ -29,7 +29,6 @@ body{height:100vh;background:var(--bg);display:flex;align-items:center;justify-c
   text-align:center;
   position:relative;
   z-index:2;
-  margin-top:120px; /* space for initial animation */
 }
 .reg-card h2{font-size:24px;font-weight:700;margin-bottom:24px;color:var(--text);}
 .input-field{display:flex;flex-direction:column;align-items:flex-start;margin-bottom:20px;text-align:left;}
@@ -64,58 +63,40 @@ footer{margin-top:20px;font-size:12px;color:var(--muted);}
 .alert-btn{padding:10px 20px;background:var(--accent);color:#fff;border:none;border-radius:12px;cursor:pointer;}
 .alert-btn:hover{background:var(--accent-hover);}
 
-/* Initial animation above form */
-.initial-loading {
-  position:absolute;
-  top:40px;
-  display:flex;align-items:center;justify-content:center;gap:20px;
-  z-index:1;
-}
-.initial-loading i {
-  font-size:50px;
-  color:var(--accent);
-  animation:floatInit 2s ease-in-out infinite;
-}
-@keyframes floatInit {
-  0%,100%{transform:translateY(0);}
-  50%{transform:translateY(-8px);}
-}
-
-/* Uploading animation overlay */
-.uploading-overlay {
-  position: absolute;
+.loading-overlay {
+  position: fixed;
   top:0;left:0;right:0;bottom:0;
-  display:flex;flex-direction:column;
-  align-items:center;justify-content:center;
-  background:rgba(255,255,255,0.85);
-  z-index:5;
-  opacity:0;
-  pointer-events:none;
+  display:flex;align-items:center;justify-content:center;
+  background:rgba(255,255,255,0.95);
+  z-index:1;
+  opacity:1;
+  pointer-events:auto;
+  flex-direction:column;
   transition:opacity .3s ease;
 }
-.uploading-overlay.show {opacity:1;pointer-events:auto;}
-.uploading-animation {
-  display:flex;align-items:center;gap:22px;
+.loading-animation {
+  display:flex;align-items:center;gap:20px;
+  animation: float 2s ease-in-out infinite;
 }
-.uploading-animation i {
-  font-size:48px;
+@keyframes float {
+  0%,100% { transform:translateY(0);}
+  50% { transform:translateY(-8px);}
+}
+.loading-animation i {
+  font-size:50px;
   color:var(--accent);
-  animation:floatUpload 2s ease-in-out infinite;
+  transition:all 0.5s ease;
 }
-@keyframes floatUpload {
-  0%,100%{transform:translateY(0);}
-  50%{transform:translateY(-10px);}
+.loading-dots {
+  display:flex;gap:6px;margin-top:8px;justify-content:center;
 }
-.uploading-dots {
-  display:flex;gap:6px;margin-top:12px;justify-content:center;
-}
-.uploading-dots span {
+.loading-dots span {
   width:8px;height:8px;background:var(--accent);
   border-radius:50%;
   animation: dots 1.4s infinite ease-in-out;
 }
-.uploading-dots span:nth-child(2){animation-delay:0.2s;}
-.uploading-dots span:nth-child(3){animation-delay:0.4s;}
+.loading-dots span:nth-child(2){animation-delay:0.2s;}
+.loading-dots span:nth-child(3){animation-delay:0.4s;}
 @keyframes dots {
   0%,80%,100%{transform:scale(0);}
   40%{transform:scale(1);}
@@ -124,11 +105,16 @@ footer{margin-top:20px;font-size:12px;color:var(--muted);}
 </head>
 <body>
 
-<!-- Initial folder → Drive animation -->
-<div class="initial-loading">
-  <i class="fas fa-folder"></i>
-  <i class="fas fa-arrow-right" style="color:#6b7280;font-size:28px;"></i>
-  <i class="fab fa-google-drive"></i>
+<div class="loading-overlay" id="loadingOverlay">
+  <div class="loading-animation" id="loadingAnimation">
+    <!-- Initial: folder list animation -->
+    <i class="fas fa-folder"></i>
+    <i class="fas fa-folder"></i>
+    <i class="fas fa-folder"></i>
+  </div>
+  <div class="loading-dots">
+    <span></span><span></span><span></span>
+  </div>
 </div>
 
 <div class="reg-card">
@@ -150,17 +136,6 @@ footer{margin-top:20px;font-size:12px;color:var(--muted);}
 
   <button class="save-btn" id="saveProfile">Save & Continue</button>
   <footer>Hybrid Chat © 2025 Dominex Macedon</footer>
-
-  <!-- Uploading overlay animation -->
-  <div class="uploading-overlay" id="uploadingOverlay">
-    <div class="uploading-animation">
-      <i class="fas fa-cloud-upload-alt"></i>
-      <i class="fas fa-spinner fa-spin"></i>
-    </div>
-    <div class="uploading-dots">
-      <span></span><span></span><span></span>
-    </div>
-  </div>
 </div>
 
 <div class="alert-overlay" id="alertOverlay">
@@ -171,6 +146,9 @@ footer{margin-top:20px;font-size:12px;color:var(--muted);}
   </div>
 </div>
 
+<script async defer src="https://accounts.google.com/gsi/client"></script>
+<script async defer src="https://apis.google.com/js/api.js"></script>
+
 <script>
 const nameInput=document.getElementById('nameInput')
 const uploadBox=document.getElementById('uploadBox')
@@ -178,7 +156,8 @@ const fileInput=document.getElementById('fileInput')
 const alertOverlay=document.getElementById('alertOverlay')
 const alertMsg=document.getElementById('alertMessage')
 const alertClose=document.getElementById('alertClose')
-const uploadingOverlay=document.getElementById('uploadingOverlay')
+const loadingOverlay=document.getElementById('loadingOverlay')
+const loadingAnimation=document.getElementById('loadingAnimation')
 let avatarData=''
 
 uploadBox.addEventListener('click',()=>fileInput.click())
@@ -186,80 +165,84 @@ fileInput.addEventListener('change',e=>{
   const file=e.target.files[0]
   if(!file)return
   const reader=new FileReader()
-  reader.onload=()=>{
-    avatarData=reader.result
-    uploadBox.innerHTML=`<img src="${avatarData}" alt="avatar">`
-  }
+  reader.onload=()=>{avatarData=reader.result; uploadBox.innerHTML=`<img src="${avatarData}" alt="avatar">`}
   reader.readAsDataURL(file)
 })
-function showAlert(msg){alertMsg.textContent=msg;alertOverlay.classList.add('show')}
 alertClose.addEventListener('click',()=>alertOverlay.classList.remove('show'))
-</script>
+function showAlert(msg){alertMsg.textContent=msg;alertOverlay.classList.add('show')}
 
-<script async defer src="https://accounts.google.com/gsi/client" onload="gisLoaded()"></script>
-<script async defer src="https://apis.google.com/js/api.js" onload="gapiLoaded()"></script>
-
-<script>
-const CLIENT_ID='549003131640-r2nqtmgd6k2bssjnrjcuidn4vuii1jej.apps.googleusercontent.com'
+// Google Drive OAuth using popup (origin-based)
+const CLIENT_ID='549003131640-o9umsg7tu0uisopde76mlf3lg5krt5g7.apps.googleusercontent.com'
 const SCOPES='https://www.googleapis.com/auth/drive.file'
-let tokenClient,gapiInited=false
+let tokenClient
 
-function gapiLoaded(){gapi.load('client',initGapiClient)}
-async function initGapiClient(){
-  await gapi.client.init({discoveryDocs:["https://www.googleapis.com/discovery/v1/apis/drive/v3/rest"]})
-  gapiInited=true
-}
-function gisLoaded(){
-  tokenClient=google.accounts.oauth2.initTokenClient({
-    client_id:CLIENT_ID,scope:SCOPES,callback:''
+function initGapi(){
+  gapi.load('client',async()=>{
+    await gapi.client.init({discoveryDocs:["https://www.googleapis.com/discovery/v1/apis/drive/v3/rest"]})
   })
 }
 
-document.getElementById('saveProfile').addEventListener('click',()=>{
+function initGis(){
+  tokenClient=google.accounts.oauth2.initTokenClient({
+    client_id:CLIENT_ID,
+    scope:SCOPES,
+    callback: (resp)=>{
+      if(resp.error){console.error(resp);loadingOverlay.classList.remove('show');return;}
+      uploadProfile(profileData)
+    }
+  })
+}
+
+initGapi()
+initGis()
+
+let profileData=null
+
+document.getElementById('saveProfile').addEventListener('click',async()=>{
   const name=nameInput.value.trim()
   if(!name||!avatarData){showAlert("Please enter your name and upload a profile image.");return}
-  const profile={uuid:crypto.randomUUID(),name,avatar:avatarData}
-  localStorage.setItem('rc_profile_v2',JSON.stringify(profile))
+  profileData={uuid:crypto.randomUUID(),name,avatar:avatarData}
+  localStorage.setItem('rc_profile_v2',JSON.stringify(profileData))
 
-  uploadingOverlay.classList.add('show')
+  // Show uploading animation
+  loadingOverlay.classList.add('show')
+  loadingAnimation.innerHTML = '<i class="fas fa-folder"></i><i class="fas fa-arrow-right" style="color:#6b7280;font-size:28px;"></i><i class="fab fa-google-drive"></i>'
 
-  tokenClient.callback=async(resp)=>{
-    if(resp.error){console.error(resp);uploadingOverlay.classList.remove('show');return}
-    await uploadToDrive(profile)
-    setTimeout(()=>{uploadingOverlay.classList.remove('show');window.location.href='index.html'},1200)
-  }
-  if(!gapi.client.getToken()) tokenClient.requestAccessToken({prompt:'consent'})
-  else uploadToDrive(profile)
+  // Request token if not already granted
+  const token=gapi.client.getToken()
+  if(!token) tokenClient.requestAccessToken({prompt:'consent'})
+  else uploadProfile(profileData)
 })
 
-async function uploadToDrive(profile){
+async function uploadProfile(profile){
   const metadata={name:'account.json',mimeType:'application/json'}
-  const fileContent=JSON.stringify(profile,null,2)
+  const content=JSON.stringify(profile,null,2)
   const form=new FormData()
   form.append('metadata',new Blob([JSON.stringify(metadata)],{type:'application/json'}))
-  form.append('file',new Blob([fileContent],{type:'application/json'}))
+  form.append('file',new Blob([content],{type:'application/json'}))
   const accessToken=gapi.client.getToken().access_token
   const res=await fetch('https://www.googleapis.com/upload/drive/v3/files?uploadType=multipart',{
     method:'POST',
-    headers:new Headers({'Authorization':'Bearer '+accessToken}),
+    headers:{'Authorization':'Bearer '+accessToken},
     body:form
   })
   const result=await res.json()
-  console.log('Uploaded account.json to Drive:',result)
-}
-</script>
+  console.log('Uploaded to Drive:',result)
 
-<script>
+  setTimeout(()=>{
+    loadingOverlay.classList.remove('show')
+    window.location.href='index.html'
+  },1200)
+}
+
+// Disable context menu and inspect
 document.addEventListener('contextmenu',e=>e.preventDefault())
 document.addEventListener('keydown',e=>{
-  if(
-    e.key==='F12'||
-    (e.ctrlKey&&e.shiftKey&&['I','J','C'].includes(e.key.toUpperCase()))||
-    (e.ctrlKey&&['U','S','P'].includes(e.key.toUpperCase()))
-  ){e.preventDefault();e.stopPropagation()}
+  if(e.key==='F12'||(e.ctrlKey&&e.shiftKey&&['I','J','C'].includes(e.key.toUpperCase()))||(e.ctrlKey&&['U','S','P'].includes(e.key.toUpperCase()))){
+    e.preventDefault();e.stopPropagation()
+  }
 })
 </script>
 
 </body>
 </html>
-
