--- a/register.html
+++ b/register.html
@@ -18,7 +18,7 @@
   --shadow:rgba(0,0,0,0.08);
 }
 *{box-sizing:border-box;margin:0;padding:0;font-family:Inter,sans-serif;}
-body{height:100vh;background:var(--bg);display:flex;align-items:center;justify-content:center;position:relative;}
+body{height:100vh;background:var(--bg);display:flex;align-items:center;justify-content:center;position:relative;flex-direction:column;}
 .reg-card{
   background:var(--card);
   padding:32px 28px;
@@ -63,54 +63,37 @@ footer{margin-top:20px;font-size:12px;color:var(--muted);}
 .alert-btn{padding:10px 20px;background:var(--accent);color:#fff;border:none;border-radius:12px;cursor:pointer;}
 .alert-btn:hover{background:var(--accent-hover);}
 
-.loading-overlay {
-  position: fixed;
-  top:0;left:0;right:0;bottom:0;
-  display:flex;align-items:center;justify-content:center;
-  background:rgba(255,255,255,0.95);
-  z-index:1;
-  opacity:1;
-  pointer-events:auto;
-  flex-direction:column;
-  transition:opacity .3s ease;
+/* Animation overlay */
+.animation-overlay{
+  position:absolute;top:-220px;left:50%;transform:translateX(-50%);
+  width:100%;max-width:400px;
+  display:flex;flex-direction:column;align-items:center;pointer-events:none;
 }
-.loading-animation {
-  display:flex;align-items:center;gap:20px;
-  animation: float 2s ease-in-out infinite;
-}
-@keyframes float {
-  0%,100% { transform:translateY(0);}
-  50% { transform:translateY(-8px);}
-}
-.loading-animation i {
-  font-size:50px;
-  color:var(--accent);
-  transition:all 0.5s ease;
-}
-.loading-dots {
-  display:flex;gap:6px;margin-top:8px;justify-content:center;
-}
-.loading-dots span {
-  width:8px;height:8px;background:var(--accent);
-  border-radius:50%;
-  animation: dots 1.4s infinite ease-in-out;
-}
+.folder-list{display:flex;gap:12px;margin-bottom:12px;animation:floatFolders 2s ease-in-out infinite;}
+@keyframes floatFolders{0%,100%{transform:translateY(0);}50%{transform:translateY(-5px);}}
+.folder-list i{font-size:32px;color:var(--accent);}
+.upload-animation{display:flex;align-items:center;gap:20px;opacity:0;transition:opacity 0.5s ease;}
+.upload-animation.show{opacity:1;}
+.upload-animation i{font-size:50px;color:var(--accent);}
+.loading-dots{display:flex;gap:6px;margin-top:8px;justify-content:center;}
+.loading-dots span{width:8px;height:8px;background:var(--accent);border-radius:50%;animation:dots 1.4s infinite ease-in-out;}
 .loading-dots span:nth-child(2){animation-delay:0.2s;}
 .loading-dots span:nth-child(3){animation-delay:0.4s;}
-@keyframes dots {
-  0%,80%,100%{transform:scale(0);}
-  40%{transform:scale(1);}
-}
+@keyframes dots{0%,80%,100%{transform:scale(0);}40%{transform:scale(1);}}
 </style>
 </head>
 <body>
 
-<div class="loading-overlay" id="loadingOverlay">
-  <div class="loading-animation" id="loadingAnimation">
-    <!-- Initial: folder list animation -->
+<div class="animation-overlay">
+  <div class="folder-list" id="folderList">
     <i class="fas fa-folder"></i>
     <i class="fas fa-folder"></i>
     <i class="fas fa-folder"></i>
+  </div>
+  <div class="upload-animation" id="uploadAnimation">
+    <i class="fas fa-folder"></i>
+    <i class="fas fa-arrow-right" style="color:#6b7280;font-size:28px;"></i>
+    <i class="fab fa-google-drive"></i>
   </div>
   <div class="loading-dots">
     <span></span><span></span><span></span>
@@ -156,14 +139,14 @@ const fileInput=document.getElementById('fileInput')
 const alertOverlay=document.getElementById('alertOverlay')
 const alertMsg=document.getElementById('alertMessage')
 const alertClose=document.getElementById('alertClose')
-const loadingOverlay=document.getElementById('loadingOverlay')
-const loadingAnimation=document.getElementById('loadingAnimation')
+const folderList=document.getElementById('folderList')
+const uploadAnimation=document.getElementById('uploadAnimation')
 let avatarData=''
 
 uploadBox.addEventListener('click',()=>fileInput.click())
 fileInput.addEventListener('change',e=>{
   const file=e.target.files[0]
-  if(!file)return
+  if(!file) return
   const reader=new FileReader()
   reader.onload=()=>{avatarData=reader.result; uploadBox.innerHTML=`<img src="${avatarData}" alt="avatar">`}
   reader.readAsDataURL(file)
@@ -171,23 +154,21 @@ fileInput.addEventListener('change',e=>{
 alertClose.addEventListener('click',()=>alertOverlay.classList.remove('show'))
 function showAlert(msg){alertMsg.textContent=msg;alertOverlay.classList.add('show')}
 
-// Google Drive OAuth using popup (origin-based)
+// Google Drive OAuth popup
 const CLIENT_ID='549003131640-o9umsg7tu0uisopde76mlf3lg5krt5g7.apps.googleusercontent.com'
 const SCOPES='https://www.googleapis.com/auth/drive.file'
-let tokenClient
+let tokenClient, profileData=null
 
 function initGapi(){
-  gapi.load('client',async()=>{
-    await gapi.client.init({discoveryDocs:["https://www.googleapis.com/discovery/v1/apis/drive/v3/rest"]})
-  })
+  gapi.load('client',async()=>{await gapi.client.init({discoveryDocs:["https://www.googleapis.com/discovery/v1/apis/drive/v3/rest"]})})
 }
 
 function initGis(){
   tokenClient=google.accounts.oauth2.initTokenClient({
     client_id:CLIENT_ID,
     scope:SCOPES,
-    callback: (resp)=>{
-      if(resp.error){console.error(resp);loadingOverlay.classList.remove('show');return;}
+    callback: resp=>{
+      if(resp.error){console.error(resp);return}
       uploadProfile(profileData)
     }
   })
@@ -196,19 +177,16 @@ function initGis(){
 initGapi()
 initGis()
 
-let profileData=null
-
-document.getElementById('saveProfile').addEventListener('click',async()=>{
+document.getElementById('saveProfile').addEventListener('click',()=>{
   const name=nameInput.value.trim()
-  if(!name||!avatarData){showAlert("Please enter your name and upload a profile image.");return}
+  if(!name||!avatarData){showAlert("Please enter your name and upload a profile image.");return;}
   profileData={uuid:crypto.randomUUID(),name,avatar:avatarData}
   localStorage.setItem('rc_profile_v2',JSON.stringify(profileData))
 
-  // Show uploading animation
-  loadingOverlay.classList.add('show')
-  loadingAnimation.innerHTML = '<i class="fas fa-folder"></i><i class="fas fa-arrow-right" style="color:#6b7280;font-size:28px;"></i><i class="fab fa-google-drive"></i>'
+  // Switch animation
+  folderList.style.display='none'
+  uploadAnimation.classList.add('show')
 
-  // Request token if not already granted
   const token=gapi.client.getToken()
   if(!token) tokenClient.requestAccessToken({prompt:'consent'})
   else uploadProfile(profileData)
@@ -229,10 +207,7 @@ async function uploadProfile(profile){
   const result=await res.json()
   console.log('Uploaded to Drive:',result)
 
-  setTimeout(()=>{
-    loadingOverlay.classList.remove('show')
-    window.location.href='index.html'
-  },1200)
+  setTimeout(()=>window.location.href='index.html',1200)
 }
 
 // Disable context menu and inspect
