--- a/register.html
+++ b/register.html
@@ -6,7 +6,6 @@
 <title>Register — Hybrid Chat</title>
 <link rel="icon" type="image/png" href="hybrid.png">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-
 <style>
 :root {
   --accent:#6366f1;
@@ -18,7 +17,7 @@
   --shadow:rgba(0,0,0,0.08);
 }
 *{box-sizing:border-box;margin:0;padding:0;font-family:Inter,sans-serif;}
-body{height:100vh;background:var(--bg);display:flex;align-items:center;justify-content:center;position:relative;flex-direction:column;}
+body{height:100vh;background:var(--bg);display:flex;flex-direction:column;align-items:center;justify-content:center;}
 .reg-card{
   background:var(--card);
   padding:32px 28px;
@@ -63,37 +62,45 @@ footer{margin-top:20px;font-size:12px;color:var(--muted);}
 .alert-btn{padding:10px 20px;background:var(--accent);color:#fff;border:none;border-radius:12px;cursor:pointer;}
 .alert-btn:hover{background:var(--accent-hover);}
 
-/* Animation overlay */
-.animation-overlay{
-  position:absolute;top:-220px;left:50%;transform:translateX(-50%);
-  width:100%;max-width:400px;
-  display:flex;flex-direction:column;align-items:center;pointer-events:none;
+/* Loading Animations */
+.loading-overlay {
+  position: fixed;
+  top:0;left:0;right:0;bottom:0;
+  display:flex;flex-direction:column;align-items:center;justify-content:center;
+  background:rgba(255,255,255,0.95);
+  z-index:999;
+  opacity:1;
 }
-.folder-list{display:flex;gap:12px;margin-bottom:12px;animation:floatFolders 2s ease-in-out infinite;}
-@keyframes floatFolders{0%,100%{transform:translateY(0);}50%{transform:translateY(-5px);}}
-.folder-list i{font-size:32px;color:var(--accent);}
-.upload-animation{display:flex;align-items:center;gap:20px;opacity:0;transition:opacity 0.5s ease;}
-.upload-animation.show{opacity:1;}
-.upload-animation i{font-size:50px;color:var(--accent);}
-.loading-dots{display:flex;gap:6px;margin-top:8px;justify-content:center;}
-.loading-dots span{width:8px;height:8px;background:var(--accent);border-radius:50%;animation:dots 1.4s infinite ease-in-out;}
+.loading-animation {
+  display:flex;align-items:center;gap:20px;
+  animation: float 2s ease-in-out infinite;
+}
+@keyframes float {
+  0%,100% { transform:translateY(0);}
+  50% { transform:translateY(-8px);}
+}
+.loading-animation i {font-size:50px;color:var(--accent);transition:all 0.5s ease;}
+.loading-dots {
+  display:flex;gap:6px;margin-top:12px;justify-content:center;
+}
+.loading-dots span {
+  width:8px;height:8px;background:var(--accent);
+  border-radius:50%;
+  animation: dots 1.4s infinite ease-in-out;
+}
 .loading-dots span:nth-child(2){animation-delay:0.2s;}
 .loading-dots span:nth-child(3){animation-delay:0.4s;}
-@keyframes dots{0%,80%,100%{transform:scale(0);}40%{transform:scale(1);}}
+@keyframes dots {0%,80%,100%{transform:scale(0);}40%{transform:scale(1);}}
 </style>
 </head>
 <body>
 
-<div class="animation-overlay">
-  <div class="folder-list" id="folderList">
+<!-- Loading Animation Initially -->
+<div class="loading-overlay" id="initialLoading">
+  <div class="loading-animation">
     <i class="fas fa-folder"></i>
     <i class="fas fa-folder"></i>
     <i class="fas fa-folder"></i>
-  </div>
-  <div class="upload-animation" id="uploadAnimation">
-    <i class="fas fa-folder"></i>
-    <i class="fas fa-arrow-right" style="color:#6b7280;font-size:28px;"></i>
-    <i class="fab fa-google-drive"></i>
   </div>
   <div class="loading-dots">
     <span></span><span></span><span></span>
@@ -129,8 +136,20 @@ footer{margin-top:20px;font-size:12px;color:var(--muted);}
   </div>
 </div>
 
-<script async defer src="https://accounts.google.com/gsi/client"></script>
-<script async defer src="https://apis.google.com/js/api.js"></script>
+<!-- Uploading Animation -->
+<div class="loading-overlay" id="uploadingOverlay" style="display:none;">
+  <div class="loading-animation">
+    <i class="fas fa-folder"></i>
+    <i class="fas fa-arrow-right" style="font-size:28px;color:#6b7280;"></i>
+    <i class="fab fa-google-drive"></i>
+  </div>
+  <div class="loading-dots">
+    <span></span><span></span><span></span>
+  </div>
+</div>
+
+<script src="https://apis.google.com/js/api.js"></script>
+<script src="https://accounts.google.com/gsi/client"></script>
 
 <script>
 const nameInput=document.getElementById('nameInput')
@@ -139,8 +158,8 @@ const fileInput=document.getElementById('fileInput')
 const alertOverlay=document.getElementById('alertOverlay')
 const alertMsg=document.getElementById('alertMessage')
 const alertClose=document.getElementById('alertClose')
-const folderList=document.getElementById('folderList')
-const uploadAnimation=document.getElementById('uploadAnimation')
+const initialLoading=document.getElementById('initialLoading')
+const uploadingOverlay=document.getElementById('uploadingOverlay')
 let avatarData=''
 
 uploadBox.addEventListener('click',()=>fileInput.click())
@@ -148,56 +167,57 @@ fileInput.addEventListener('change',e=>{
   const file=e.target.files[0]
   if(!file) return
   const reader=new FileReader()
-  reader.onload=()=>{avatarData=reader.result; uploadBox.innerHTML=`<img src="${avatarData}" alt="avatar">`}
+  reader.onload=()=> {
+    avatarData=reader.result
+    uploadBox.innerHTML=`<img src="${avatarData}" alt="avatar">`
+  }
   reader.readAsDataURL(file)
 })
-alertClose.addEventListener('click',()=>alertOverlay.classList.remove('show'))
-function showAlert(msg){alertMsg.textContent=msg;alertOverlay.classList.add('show')}
 
-// Google Drive OAuth popup
+function showAlert(msg){ alertMsg.textContent=msg; alertOverlay.classList.add('show') }
+alertClose.addEventListener('click',()=>alertOverlay.classList.remove('show'))
+
+// Hide initial loading after 1.5s
+setTimeout(()=>{initialLoading.style.display='none'},1500)
+
+// Google OAuth Origin Popup
 const CLIENT_ID='549003131640-o9umsg7tu0uisopde76mlf3lg5krt5g7.apps.googleusercontent.com'
 const SCOPES='https://www.googleapis.com/auth/drive.file'
-let tokenClient, profileData=null
+let tokenClient
 
-function initGapi(){
-  gapi.load('client',async()=>{await gapi.client.init({discoveryDocs:["https://www.googleapis.com/discovery/v1/apis/drive/v3/rest"]})})
-}
-
-function initGis(){
+function gisLoaded(){
   tokenClient=google.accounts.oauth2.initTokenClient({
-    client_id:CLIENT_ID,
-    scope:SCOPES,
-    callback: resp=>{
-      if(resp.error){console.error(resp);return}
-      uploadProfile(profileData)
-    }
+    client_id: CLIENT_ID,
+    scope: SCOPES,
+    callback: ''
   })
 }
 
-initGapi()
-initGis()
-
 document.getElementById('saveProfile').addEventListener('click',()=>{
   const name=nameInput.value.trim()
-  if(!name||!avatarData){showAlert("Please enter your name and upload a profile image.");return;}
-  profileData={uuid:crypto.randomUUID(),name,avatar:avatarData}
-  localStorage.setItem('rc_profile_v2',JSON.stringify(profileData))
+  if(!name||!avatarData){ showAlert("Please enter your name and upload a profile image."); return }
+  const profile={uuid:crypto.randomUUID(),name,avatar:avatarData}
+  localStorage.setItem('rc_profile_v2',JSON.stringify(profile))
 
-  // Switch animation
-  folderList.style.display='none'
-  uploadAnimation.classList.add('show')
+  uploadingOverlay.style.display='flex'
 
-  const token=gapi.client.getToken()
-  if(!token) tokenClient.requestAccessToken({prompt:'consent'})
-  else uploadProfile(profileData)
+  tokenClient.callback=async(resp)=>{
+    if(resp.error){ console.error(resp); uploadingOverlay.style.display='none'; return }
+    await uploadToDrive(profile)
+    setTimeout(()=>{ uploadingOverlay.style.display='none'; window.location.href='index.html' },1200)
+  }
+
+  if(!gapi.client.getToken()){ tokenClient.requestAccessToken({prompt:'consent'}) }
+  else uploadToDrive(profile)
 })
 
-async function uploadProfile(profile){
+async function uploadToDrive(profile){
+  await gapi.client.init({discoveryDocs:["https://www.googleapis.com/discovery/v1/apis/drive/v3/rest"]})
   const metadata={name:'account.json',mimeType:'application/json'}
-  const content=JSON.stringify(profile,null,2)
+  const fileContent=JSON.stringify(profile,null,2)
   const form=new FormData()
   form.append('metadata',new Blob([JSON.stringify(metadata)],{type:'application/json'}))
-  form.append('file',new Blob([content],{type:'application/json'}))
+  form.append('file',new Blob([fileContent],{type:'application/json'}))
   const accessToken=gapi.client.getToken().access_token
   const res=await fetch('https://www.googleapis.com/upload/drive/v3/files?uploadType=multipart',{
     method:'POST',
@@ -205,16 +225,14 @@ async function uploadProfile(profile){
     body:form
   })
   const result=await res.json()
-  console.log('Uploaded to Drive:',result)
-
-  setTimeout(()=>window.location.href='index.html',1200)
+  console.log('Uploaded account.json:',result)
 }
 
-// Disable context menu and inspect
-document.addEventListener('contextmenu',e=>e.preventDefault())
-document.addEventListener('keydown',e=>{
+// Disable right-click and devtools keys
+document.addEventListener('contextmenu', e=>e.preventDefault())
+document.addEventListener('keydown', e=>{
   if(e.key==='F12'||(e.ctrlKey&&e.shiftKey&&['I','J','C'].includes(e.key.toUpperCase()))||(e.ctrlKey&&['U','S','P'].includes(e.key.toUpperCase()))){
-    e.preventDefault();e.stopPropagation()
+    e.preventDefault(); e.stopPropagation()
   }
 })
 </script>
